api/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec: 
      containers:
      - name: api-pod
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        image: adeyinkaadegbenro/api-app:1.0
